<resources>
    <string name="app_name">RazrIChargeCurrent</string>
    <string name="short_help_text">This program allows overriding the battery charging current. Beware,
        that too high charging currents may harm the device where you plug the USB cable! The author
        of this application is not responsible for any damages caused!
        Settings will be immediately saved and are active until the phone is restarted.
    </string>
    <string name="lim_500">Limit to 500 mA</string>
    <string name="lim_no">Default behaviour to USB spec</string>
    <string name="lim_ovr_950">Override to 950 mA</string>
    <string name="lim_ovr_inf">Override to maximum current</string>
    <string name="btn_help">Help</string>
    <string name="btn_lic">Licenses</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_text">
        This application controls the intel medfield battery charging driver. It needs the kernel
        patch from https://gist.github.com/NerdyProjects/91f466bfc98921945726 applied to work.\n
        Details:\n
        Your Phone will normally charge at rates of about 1A when connected to a charger which
        identifies itself by shorting the D+/D- lines of the USB cable.\n
        If it is connected to another USB port, it will only charge with less than 350 mA as some
        additional power is needed to operate the phone.\n
        This patch disables charger detection and sets a higher charging speed, no matter where the
        phone is connected to.\n
        This may lead to destruction of the USB port where you connect the phone to, therefore
        no responsibility is taken. Anyway, the risk is quite low and the author did not have any
        problem so far.\n
        What may occur are these USB overcurrent limits on newer computers. You can safely ignore
        them but the USB port may be powered down automatically until you replug the cable or
        restart the computer.
    </string>
    <string name="lic_test">
        This application is open source, published unter the GPLv3. Please see
        https://github.com/NerdyProjects/RazrIChargeCurrent for sources and details.
        \n\n
        The application logo is done by http://thesquid.ink/ and licensed under CC BY 3.0
        (http://creativecommons.org/licenses/by/3.0/).
    </string>
    <string name="action_settings">Settings</string>
</resources>
